// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectForm renders 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1"
    >
      Add
       project
    </h1>
  </header>
  <article
    role="main"
  >
    <form
      action={undefined}
      id="Project__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your project a title
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="summary"
        >
          Summary
        </label>
        <p
          className="hint"
          id="summary-hint"
        >
          A brief overview of the project
        </p>
        <div>
          <textarea
            aria-describedby="summary-hint"
            className="under-50"
            defaultValue=""
            id="summary"
            name="summary"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            40 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Which council was involved?
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <fieldset>
        <legend>
          Project stage?
        </legend>
        <input
          checked={false}
          disabled={false}
          id="idea"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Idea"
        />
        <label
          htmlFor="idea"
        >
          Idea
        </label>
        <input
          checked={false}
          disabled={false}
          id="discovery"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Discovery"
        />
        <label
          htmlFor="discovery"
        >
          Discovery
        </label>
        <input
          checked={false}
          disabled={false}
          id="pilot"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Pilot"
        />
        <label
          htmlFor="pilot"
        >
          Pilot
        </label>
        <input
          checked={false}
          disabled={false}
          id="inBuild"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="In Build"
        />
        <label
          htmlFor="inBuild"
        >
          In Build
        </label>
        <input
          checked={false}
          disabled={false}
          id="live"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Live"
        />
        <label
          htmlFor="live"
        >
          Live
        </label>
      </fieldset>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="service"
        >
          What council activity does it relate to?
        </label>
        <p
          className="hint"
          id="service-hint"
        >
          eg. Planning, Roads and Parking, Community Services, Waste Management
        </p>
        <input
          aria-describedby="service-hint"
          className=""
          disabled={false}
          id="service"
          maxLength={undefined}
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
        >
          Why is the work being done? What is the opportunity?
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            defaultValue=""
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="outcome"
        >
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-0"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="partner_links"
        >
          Partner links (optional)
        </label>
        <p
          className="hint"
          id="partner_links-hint"
        >
          Link to any supporting material for your partner. This can include a partner on your website, partner video or the live partner. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="partner_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="partner_links-hint"
                className="text-box "
                defaultValue=""
                id="partner_links-0"
                name="partner_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="partner_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="partner_links-hint"
                className="text-box "
                defaultValue=""
                id="partner_links-1"
                name="partner_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="project_links"
        >
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your project. This can include a project on your website, project video or the live project. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-0"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Project Contact
      </h3>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contactName"
        >
          Contact's name
        </label>
        <p
          className="hint"
          id="contactName-hint"
        >
          The full name of the best person to contact.
        </p>
        <input
          aria-describedby="contactName-hint"
          className=""
          disabled={false}
          id="contactName"
          maxLength={undefined}
          name="contactName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contactEmail"
        >
          Project contact email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="contactEmail"
          maxLength={undefined}
          name="contactEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div>
        <input
          checked={false}
          disabled={false}
          id="contactAgreed"
          name="contactAgreed"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="contactAgreed"
        >
          I confirm this person gives permission to be contacted and approve the use of this information being made public on the Digital Marketplace.
        </label>
      </div>
      <input
        type="submit"
        value="Publish Project"
      />
    </form>
  </article>
</div>
`;

exports[`ProjectForm renders empty in edit mode 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1"
    >
      Edit
       project
    </h1>
  </header>
  <article
    role="main"
  >
    <form
      action={undefined}
      id="Project__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your project a title
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="summary"
        >
          Summary
        </label>
        <p
          className="hint"
          id="summary-hint"
        >
          A brief overview of the project
        </p>
        <div>
          <textarea
            aria-describedby="summary-hint"
            className="under-50"
            defaultValue=""
            id="summary"
            name="summary"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            40 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Which council was involved?
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <fieldset>
        <legend>
          Project stage?
        </legend>
        <input
          checked={false}
          disabled={false}
          id="idea"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Idea"
        />
        <label
          htmlFor="idea"
        >
          Idea
        </label>
        <input
          checked={false}
          disabled={false}
          id="discovery"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Discovery"
        />
        <label
          htmlFor="discovery"
        >
          Discovery
        </label>
        <input
          checked={false}
          disabled={false}
          id="pilot"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Pilot"
        />
        <label
          htmlFor="pilot"
        >
          Pilot
        </label>
        <input
          checked={false}
          disabled={false}
          id="inBuild"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="In Build"
        />
        <label
          htmlFor="inBuild"
        >
          In Build
        </label>
        <input
          checked={false}
          disabled={false}
          id="live"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Live"
        />
        <label
          htmlFor="live"
        >
          Live
        </label>
      </fieldset>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="service"
        >
          What council activity does it relate to?
        </label>
        <p
          className="hint"
          id="service-hint"
        >
          eg. Planning, Roads and Parking, Community Services, Waste Management
        </p>
        <input
          aria-describedby="service-hint"
          className=""
          disabled={false}
          id="service"
          maxLength={undefined}
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
        >
          Why is the work being done? What is the opportunity?
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            defaultValue=""
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="outcome"
        >
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-0"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="partner_links"
        >
          Partner links (optional)
        </label>
        <p
          className="hint"
          id="partner_links-hint"
        >
          Link to any supporting material for your partner. This can include a partner on your website, partner video or the live partner. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="partner_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="partner_links-hint"
                className="text-box "
                defaultValue=""
                id="partner_links-0"
                name="partner_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="partner_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="partner_links-hint"
                className="text-box "
                defaultValue=""
                id="partner_links-1"
                name="partner_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="project_links"
        >
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your project. This can include a project on your website, project video or the live project. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-0"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Project Contact
      </h3>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contactName"
        >
          Contact's name
        </label>
        <p
          className="hint"
          id="contactName-hint"
        >
          The full name of the best person to contact.
        </p>
        <input
          aria-describedby="contactName-hint"
          className=""
          disabled={false}
          id="contactName"
          maxLength={undefined}
          name="contactName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contactEmail"
        >
          Project contact email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="contactEmail"
          maxLength={undefined}
          name="contactEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div>
        <input
          checked={false}
          disabled={false}
          id="contactAgreed"
          name="contactAgreed"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="contactAgreed"
        >
          I confirm this person gives permission to be contacted and approve the use of this information being made public on the Digital Marketplace.
        </label>
      </div>
      <input
        type="submit"
        value="Save Changes"
      />
    </form>
  </article>
</div>
`;

exports[`ProjectForm renders with errors 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1"
    >
      Add
       project
    </h1>
  </header>
  <article
    role="main"
  >
    <div
      aria-describedby="validation-masthead-heading"
      className="callout--warning"
      role="alert"
      tabIndex="-1"
    >
      <h4
        id="validation-masthead-heading"
      >
        There was a problem with the details you gave
      </h4>
      <ul>
        <li>
          <a
            href="#title"
          >
            Title is required
          </a>
        </li>
        <li>
          <a
            href="#summary"
          >
            You must outline the project summary
          </a>
        </li>
        <li>
          <a
            href="#client"
          >
            Council is required
          </a>
        </li>
        <li>
          <a
            href="#discovery"
          >
            You must provide project stage
          </a>
        </li>
        <li>
          <a
            href="#service"
          >
            Council activity is required
          </a>
        </li>
        <li>
          <a
            href="#opportunity"
          >
            You must outline the opportunity
          </a>
        </li>
        <li>
          <a
            href="#outcome"
          >
            You must provide at least one outcome.
          </a>
        </li>
        <li>
          <a
            href="#contactName"
          >
            Please provide a contact name.
          </a>
        </li>
        <li>
          <a
            href="#contactEmail"
          >
            Please provide a contact email address.
          </a>
        </li>
        <li>
          <a
            href="#contactAgreed"
          >
            Please acknowledge the contact point.
          </a>
        </li>
      </ul>
    </div>
    <form
      action="/foo/bar"
      id="Project__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your project a title
        </label>
        <a
          className="validation-message"
          href="#title"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            Title is required
          </span>
        </a>
        <input
          aria-describedby={undefined}
          className="invalid"
          disabled={false}
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="summary"
        >
          Summary
        </label>
        <p
          className="hint"
          id="summary-hint"
        >
          A brief overview of the project
        </p>
        <a
          className="validation-message"
          href="#summary"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            You must outline the project summary
          </span>
        </a>
        <div>
          <textarea
            aria-describedby="summary-hint"
            className="invalid under-50"
            defaultValue=""
            id="summary"
            name="summary"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            40 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Which council was involved?
        </label>
        <a
          className="validation-message"
          href="#client"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            Council is required
          </span>
        </a>
        <input
          aria-describedby={undefined}
          className="invalid"
          disabled={false}
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <fieldset>
        <legend>
          Project stage?
        </legend>
        <a
          className="validation-message"
          href="#discovery"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            You must provide project stage
          </span>
        </a>
        <input
          checked={false}
          disabled={false}
          id="idea"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Idea"
        />
        <label
          htmlFor="idea"
        >
          Idea
        </label>
        <input
          checked={false}
          disabled={false}
          id="discovery"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Discovery"
        />
        <label
          htmlFor="discovery"
        >
          Discovery
        </label>
        <input
          checked={false}
          disabled={false}
          id="pilot"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Pilot"
        />
        <label
          htmlFor="pilot"
        >
          Pilot
        </label>
        <input
          checked={false}
          disabled={false}
          id="inBuild"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="In Build"
        />
        <label
          htmlFor="inBuild"
        >
          In Build
        </label>
        <input
          checked={false}
          disabled={false}
          id="live"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Live"
        />
        <label
          htmlFor="live"
        >
          Live
        </label>
      </fieldset>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="service"
        >
          What council activity does it relate to?
        </label>
        <p
          className="hint"
          id="service-hint"
        >
          eg. Planning, Roads and Parking, Community Services, Waste Management
        </p>
        <a
          className="validation-message"
          href="#service"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            Council activity is required
          </span>
        </a>
        <input
          aria-describedby="service-hint"
          className="invalid"
          disabled={false}
          id="service"
          maxLength={undefined}
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
        >
          Why is the work being done? What is the opportunity?
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <a
          className="validation-message"
          href="#opportunity"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            You must outline the opportunity
          </span>
        </a>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="invalid under-200"
            defaultValue=""
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="outcome"
        >
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <a
          className="validation-message"
          href="#outcome"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            You must provide at least one outcome.
          </span>
        </a>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box invalid"
                defaultValue=""
                id="outcome-0"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box invalid"
                defaultValue=""
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="partner_links"
        >
          Partner links (optional)
        </label>
        <p
          className="hint"
          id="partner_links-hint"
        >
          Link to any supporting material for your partner. This can include a partner on your website, partner video or the live partner. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="partner_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="partner_links-hint"
                className="text-box "
                defaultValue=""
                id="partner_links-0"
                name="partner_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="partner_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="partner_links-hint"
                className="text-box "
                defaultValue=""
                id="partner_links-1"
                name="partner_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="project_links"
        >
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your project. This can include a project on your website, project video or the live project. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-0"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Project Contact
      </h3>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contactName"
        >
          Contact's name
        </label>
        <p
          className="hint"
          id="contactName-hint"
        >
          The full name of the best person to contact.
        </p>
        <a
          className="validation-message"
          href="#contactName"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            Please provide a contact name.
          </span>
        </a>
        <input
          aria-describedby="contactName-hint"
          className="invalid"
          disabled={false}
          id="contactName"
          maxLength={undefined}
          name="contactName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contactEmail"
        >
          Project contact email
        </label>
        <a
          className="validation-message"
          href="#contactEmail"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            Please provide a contact email address.
          </span>
        </a>
        <input
          aria-describedby={undefined}
          className="invalid"
          disabled={false}
          id="contactEmail"
          maxLength={undefined}
          name="contactEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div>
        <a
          className="validation-message"
          href="#contactAgreed"
        >
          <span
            className="visuallyhidden"
          >
            Validation Error: 
          </span>
          <span>
            Please acknowledge the contact point.
          </span>
        </a>
        <input
          checked={false}
          disabled={false}
          id="contactAgreed"
          name="contactAgreed"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="contactAgreed"
        >
          I confirm this person gives permission to be contacted and approve the use of this information being made public on the Digital Marketplace.
        </label>
      </div>
      <input
        type="submit"
        value="Publish Project"
      />
    </form>
  </article>
</div>
`;

exports[`ProjectForm renders with form_options 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1"
    >
      Add
       project
    </h1>
  </header>
  <article
    role="main"
  >
    <form
      action="/foo/bar"
      id="Project__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your project a title
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="summary"
        >
          Summary
        </label>
        <p
          className="hint"
          id="summary-hint"
        >
          A brief overview of the project
        </p>
        <div>
          <textarea
            aria-describedby="summary-hint"
            className="under-50"
            defaultValue=""
            id="summary"
            name="summary"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            40 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Which council was involved?
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <fieldset>
        <legend>
          Project stage?
        </legend>
        <input
          checked={false}
          disabled={false}
          id="idea"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Idea"
        />
        <label
          htmlFor="idea"
        >
          Idea
        </label>
        <input
          checked={false}
          disabled={false}
          id="discovery"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Discovery"
        />
        <label
          htmlFor="discovery"
        >
          Discovery
        </label>
        <input
          checked={false}
          disabled={false}
          id="pilot"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Pilot"
        />
        <label
          htmlFor="pilot"
        >
          Pilot
        </label>
        <input
          checked={false}
          disabled={false}
          id="inBuild"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="In Build"
        />
        <label
          htmlFor="inBuild"
        >
          In Build
        </label>
        <input
          checked={false}
          disabled={false}
          id="live"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Live"
        />
        <label
          htmlFor="live"
        >
          Live
        </label>
      </fieldset>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="service"
        >
          What council activity does it relate to?
        </label>
        <p
          className="hint"
          id="service-hint"
        >
          eg. Planning, Roads and Parking, Community Services, Waste Management
        </p>
        <input
          aria-describedby="service-hint"
          className=""
          disabled={false}
          id="service"
          maxLength={undefined}
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
        >
          Why is the work being done? What is the opportunity?
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            defaultValue=""
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="outcome"
        >
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-0"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="partner_links"
        >
          Partner links (optional)
        </label>
        <p
          className="hint"
          id="partner_links-hint"
        >
          Link to any supporting material for your partner. This can include a partner on your website, partner video or the live partner. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="partner_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="partner_links-hint"
                className="text-box "
                defaultValue=""
                id="partner_links-0"
                name="partner_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="partner_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="partner_links-hint"
                className="text-box "
                defaultValue=""
                id="partner_links-1"
                name="partner_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="project_links"
        >
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your project. This can include a project on your website, project video or the live project. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-0"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Project Contact
      </h3>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contactName"
        >
          Contact's name
        </label>
        <p
          className="hint"
          id="contactName-hint"
        >
          The full name of the best person to contact.
        </p>
        <input
          aria-describedby="contactName-hint"
          className=""
          disabled={false}
          id="contactName"
          maxLength={undefined}
          name="contactName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contactEmail"
        >
          Project contact email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="contactEmail"
          maxLength={undefined}
          name="contactEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div>
        <input
          checked={false}
          disabled={false}
          id="contactAgreed"
          name="contactAgreed"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="contactAgreed"
        >
          I confirm this person gives permission to be contacted and approve the use of this information being made public on the Digital Marketplace.
        </label>
      </div>
      <input
        type="submit"
        value="Publish Project"
      />
    </form>
  </article>
</div>
`;

exports[`ProjectForm renders with populated fields 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1"
    >
      Add
       project
    </h1>
  </header>
  <article
    role="main"
  >
    <form
      action="https://httpbin.org/post"
      id="Project__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="title"
        >
          Give your project a title
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="summary"
        >
          Summary
        </label>
        <p
          className="hint"
          id="summary-hint"
        >
          A brief overview of the project
        </p>
        <div>
          <textarea
            aria-describedby="summary-hint"
            className="under-50"
            defaultValue=""
            id="summary"
            name="summary"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            40 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="client"
        >
          Which council was involved?
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value="The Client Name"
        />
      </div>
      <fieldset>
        <legend>
          Project stage?
        </legend>
        <input
          checked={false}
          disabled={false}
          id="idea"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Idea"
        />
        <label
          htmlFor="idea"
        >
          Idea
        </label>
        <input
          checked={false}
          disabled={false}
          id="discovery"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Discovery"
        />
        <label
          htmlFor="discovery"
        >
          Discovery
        </label>
        <input
          checked={false}
          disabled={false}
          id="pilot"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Pilot"
        />
        <label
          htmlFor="pilot"
        >
          Pilot
        </label>
        <input
          checked={false}
          disabled={false}
          id="inBuild"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="In Build"
        />
        <label
          htmlFor="inBuild"
        >
          In Build
        </label>
        <input
          checked={false}
          disabled={false}
          id="live"
          name="stage"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="radio"
          value="Live"
        />
        <label
          htmlFor="live"
        >
          Live
        </label>
      </fieldset>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="service"
        >
          What council activity does it relate to?
        </label>
        <p
          className="hint"
          id="service-hint"
        >
          eg. Planning, Roads and Parking, Community Services, Waste Management
        </p>
        <input
          aria-describedby="service-hint"
          className=""
          disabled={false}
          id="service"
          maxLength={undefined}
          name="service"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="opportunity"
        >
          Why is the work being done? What is the opportunity?
        </label>
        <p
          className="hint"
          id="opportunity-hint"
        >
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            defaultValue="The opportunity/aim/goal"
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
          />
          <span
            className="word-count-counter"
          >
            198 words remaining
          </span>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="outcome"
        >
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint"
        >
          List the key achievements of this project.
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue="Outcome 1"
                id="outcome-0"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="outcome-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue="Outcome 2"
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="partner_links"
        >
          Partner links (optional)
        </label>
        <p
          className="hint"
          id="partner_links-hint"
        >
          Link to any supporting material for your partner. This can include a partner on your website, partner video or the live partner. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="partner_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="partner_links-hint"
                className="text-box "
                defaultValue=""
                id="partner_links-0"
                name="partner_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="partner_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="partner_links-hint"
                className="text-box "
                defaultValue=""
                id="partner_links-1"
                name="partner_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field"
      >
        <label
          htmlFor="project_links"
        >
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint"
        >
          Link to any supporting material for your project. This can include a project on your website, project video or the live project. Links must begin with http
        </p>
        <div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-0"
              >
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-0"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
          </div>
          <div
            className="list-entry row"
          >
            <div
              className="col-xs-12 col-sm-9"
            >
              <label
                className="text-box-number-label"
                htmlFor="project_links-1"
              >
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
              />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button"
            >
              remove 
              <span
                className="visuallyhidden"
              >
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button"
          >
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Project Contact
      </h3>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contactName"
        >
          Contact's name
        </label>
        <p
          className="hint"
          id="contactName-hint"
        >
          The full name of the best person to contact.
        </p>
        <input
          aria-describedby="contactName-hint"
          className=""
          disabled={false}
          id="contactName"
          maxLength={undefined}
          name="contactName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contactEmail"
        >
          Project contact email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="contactEmail"
          maxLength={undefined}
          name="contactEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div>
        <input
          checked={false}
          disabled={false}
          id="contactAgreed"
          name="contactAgreed"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="contactAgreed"
        >
          I confirm this person gives permission to be contacted and approve the use of this information being made public on the Digital Marketplace.
        </label>
      </div>
      <input
        type="submit"
        value="Publish Project"
      />
    </form>
  </article>
</div>
`;
